[2012-08-27] Direct Message support