@@ -91,7 +91,10 @@ extern string_t
 getRawDM(const twitterURLS_t *, const user_t *);
 
 extern string_t
- getRawSentDM(const twitterURLS_t *, const user_t *);
+getRawSentDM(const twitterURLS_t *, const user_t *);
+
+extern string_t
+sendDM(const twitterURLS_t *, const user_t *, const string_t, const string_t);
 
 extern direct_messages_t
 readDMs(const string_t);
